// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDefaultFromField - mongodb: MongoDbNow - created_at 1`] = `
Object {
  "defaultValue": "Carbon::now()",
  "imports": Set {
    "Illuminate\\\\Support\\\\Carbon",
  },
  "isMethodCall": true,
}
`;

exports[`getDefaultFromField - mongodb: MongoDbNow - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Category - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Category - name 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Category - posts 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: DefaultValues - age 1`] = `
Object {
  "defaultValue": 18,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: DefaultValues - bool 1`] = `
Object {
  "defaultValue": true,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: DefaultValues - email 1`] = `
Object {
  "defaultValue": "hello@world.test",
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: DefaultValues - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: DefaultValues - name 1`] = `
Object {
  "defaultValue": "N.A.",
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: DefaultValues - now 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: DefaultValues - role 1`] = `
Object {
  "defaultValue": "Role::USER",
  "imports": Set {
    "App\\\\Enums\\\\Prisma\\\\Role",
  },
  "isMethodCall": true,
}
`;

exports[`getDefaultFromField: DefaultValues - uuid 1`] = `
Object {
  "defaultValue": "Str::orderedUuid()",
  "imports": Set {
    "Illuminate\\\\Support\\\\Str",
  },
  "isMethodCall": true,
}
`;

exports[`getDefaultFromField: EagerLoadA - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: EagerLoadA - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: EagerLoadB - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: EagerLoadB - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: EagerLoadB - relatedId 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyA - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyA - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyA2 - explicit_many_to_many_b2 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyA2 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyA3 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyA3 - otherIdA 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyA3 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyA4 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyA4 - otherIdA 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyA4 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyA5 - hasOne 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyA5 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyA5 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyA6 - key 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyA6 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyA7 - key 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyA7 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB2 - explicit_many_to_many_a2 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB2 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB3 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB3 - otherIdB 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB3 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB4 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB4 - otherIdB 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB4 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB5 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB5 - pivot 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB5 - pivot_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB5 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB6 - key 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB6 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB7 - key 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyB7 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot - A 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot - A_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot - B 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot - B_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot2 - explicit_many_to_many_a2 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot2 - explicit_many_to_many_a2_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot2 - explicit_many_to_many_b2 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot2 - explicit_many_to_many_b2_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot2 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot3 - A 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot3 - A_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot3 - B 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot3 - B_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot3 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot4 - A 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot4 - A_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot4 - B 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot4 - B_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot4 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot5 - A 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot5 - A_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot5 - A2 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot5 - A2_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot5 - B 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot5 - B_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot5 - B2 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot5 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot6 - A 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot6 - A_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot6 - B 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot6 - B_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot6 - key 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot7 - A 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot7 - A_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot7 - B 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot7 - B_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ExplicitManyToManyPivot7 - key 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: FieldComments - age 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: FieldComments - email 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: FieldComments - height 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: FieldComments - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: FieldComments - name 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: FieldMultipleComments - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: FieldMultipleComments - name 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Fillable - age 1`] = `
Object {
  "defaultValue": 18,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Fillable - email 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Fillable - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Fillable - name 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Fillable - password 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Guarded - age 1`] = `
Object {
  "defaultValue": 18,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Guarded - email 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Guarded - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Guarded - name 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Guarded - password 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Hidden - api_key 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Hidden - email 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Hidden - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Hidden - name 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Hidden - password 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Ignore - age 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Ignore - email 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Ignore - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ImplicitManyToManyA - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ImplicitManyToManyA - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ImplicitManyToManyB - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ImplicitManyToManyB - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MappedId - firstname 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MappedId - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MassAssignable - age 1`] = `
Object {
  "defaultValue": 18,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MassAssignable - email 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MassAssignable - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MassAssignable - name 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MassAssignable - password 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ModelComments - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ModelMultipleComments - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MultipleComments - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MultipleComments - password 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MultipleUnique - age 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MultipleUnique - email 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MultipleUnique - firstname 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MultipleUnique - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MultipleUnique - lastname 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MultipleUnique2 - age 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MultipleUnique2 - email 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MultipleUnique2 - firstname 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MultipleUnique2 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: MultipleUnique2 - lastname 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: NoPrimaryKey - age 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: NoPrimaryKey - name 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: NullableField - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: NullableField - name 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyA - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyA - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyA2 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyA2 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyA3 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyA3 - otherId 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyA3 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyA4 - main_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyA4 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyB - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyB - one_to_one_a2 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyB - relatedId 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyB2 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyB2 - one_to_many_a2 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyB2 - one_to_many_a2_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyB3 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyB3 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyB3 - relatedId 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyB4 - main_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyB4 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToManyB4 - relatedId 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneA - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneA - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneA2 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneA2 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneA3 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneA3 - otherId 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneA3 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneA4 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneA4 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneA5 - main_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneA5 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneB - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneB - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneB - relatedId 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneB2 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneB2 - one_to_one_a2 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneB2 - one_to_one_a2_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneB3 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneB3 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneB3 - related_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneB4 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneB4 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneB4 - relatedId 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneB5 - main_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneB5 - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: OneToOneB5 - relatedId 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Post - author 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Post - authorId 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Post - categories 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Post - createdAt 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Post - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Post - published 1`] = `
Object {
  "defaultValue": false,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Post - title 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Post - type 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Post - updatedAt 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Profile - bio 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Profile - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Profile - user 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Profile - userId 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ReadOnlyField - email 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ReadOnlyField - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ReadOnlyField - name 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ReadOnlyField - password 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: ReadOnlyField - phone 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: SelfRelation - child 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: SelfRelation - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: SelfRelation - parent 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: SelfRelation - relatedId 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: SoftDelete1 - deleted_at 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: SoftDelete1 - email 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: SoftDelete1 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: SoftDelete1 - password 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: SoftDelete2 - deleted_timestamp 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: SoftDelete2 - email 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: SoftDelete2 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: SoftDelete2 - password 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps1 - created_timestamp 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps1 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps1 - updated_timestamp 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps2 - created_at 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps2 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps2 - updated_timestamp 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps3 - created_timestamp 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps3 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps3 - updated_at 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps4 - created_at 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps4 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps4 - updated_at 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps5 - created_at 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps5 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps5 - updated_at 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps6 - created_at 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps6 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps6 - updated_timestamp 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps7 - created_at 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps7 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps7 - updated_at 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps8 - created_at 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps8 - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Timestamps8 - updated_timestamp 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: TouchingA - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: TouchingA - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: TouchingB - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: TouchingB - related 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: TouchingB - relatedId 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Types - active 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Types - age 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Types - birth 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Types - blob 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Types - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Types - name 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Types - price 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Types - schema 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Types - seconds 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Types - speed 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Unique - email 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Unique - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Unique - name 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Unique - username 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: UnsupportedTypes - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: User - email 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: User - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: User - name 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: User - posts 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: User - profile 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: User - role 1`] = `
Object {
  "defaultValue": "Role::USER",
  "imports": Set {
    "App\\\\Enums\\\\Prisma\\\\Role",
  },
  "isMethodCall": true,
}
`;

exports[`getDefaultFromField: Visible - api_key 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Visible - email 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Visible - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Visible - name 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: Visible - password 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithArray - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithArray - numbers 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithBackedEnum - array 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithBackedEnum - defaultEnum 1`] = `
Object {
  "defaultValue": "BackedEnum::A",
  "imports": Set {
    "App\\\\Enums\\\\Prisma\\\\BackedEnum",
  },
  "isMethodCall": true,
}
`;

exports[`getDefaultFromField: WithBackedEnum - enum 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithBackedEnum - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithBackedEnum - nullable 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithDbType - email 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithDbType - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithEnum - array 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithEnum - defaultEnum 1`] = `
Object {
  "defaultValue": "Enum::A",
  "imports": Set {
    "App\\\\Enums\\\\Prisma\\\\Enum",
  },
  "isMethodCall": true,
}
`;

exports[`getDefaultFromField: WithEnum - enum 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithEnum - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithEnum - nullable 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithGlobalPrimaryKey - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithGlobalPrimaryKeyDifferentName - primary_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithGlobalStringPrimaryKey - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithGlobalStringPrimaryKeyDifferentName - primary_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithPrimaryKey - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithPrimaryKeyDifferentName - primary_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithStringPrimaryKey - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithStringPrimaryKeyDifferentName - primary_id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: WithTableMap - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: snake_cased_models - firstname 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;

exports[`getDefaultFromField: snake_cased_models - id 1`] = `
Object {
  "defaultValue": undefined,
  "imports": Set {},
  "isMethodCall": false,
}
`;
